Icon update, browser action update, dark mode fixes

--- a/css/dark/dialogs.css
+++ b/css/dark/dialogs.css
@@ -236,3 +236,9 @@ form {
 #Renderings, #placeholders {
     color: #555555;
 }
+.scEditorInformation {
+    background-color: #00b6ff !important;
+}
+.standardWindowCaption {
+    background-color: #111111 !important;
+}
